:pencil: Add a lot richer example

--- a/example/index.html
+++ b/example/index.html
@@ -6,7 +6,7 @@
   <meta name='viewport'
         content='width=device-width'>
 
-  <title>Svelte app</title>
+  <title>Storeon Svelte • TodoMVC</title>
 </head>
 
 <body>
